--- a/05-app-webhooks/webapp/templates/configmap.yaml
+++ b/05-app-webhooks/webapp/templates/configmap.yaml
@@ -6,7 +6,7 @@ metadata:
   {{- include "webapp.labels" . | nindent 4 }}
 data:
   index.html: |
-    webhook test <p>
+    rollout pods <p>
     This is version {{ .Chart.AppVersion }} of our app, running in {{ .Values.appType }}
 
 
