--- a/05-app-webhooks/webapp/templates/deployment.yaml
+++ b/05-app-webhooks/webapp/templates/deployment.yaml
@@ -17,8 +17,10 @@ spec:
     metadata:
       {{- with .Values.podAnnotations }}
       annotations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+        gitops.training.sass.ro/appVersion: {{ .Chart.AppVersion | quote}}
+        {{- with .Values.podAnnotations }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
       labels:
         {{- include "webapp.selectorLabels" . | nindent 8 }}
     spec:
