--- a/05-app-webhooks/webapp/templates/deployment.yaml
+++ b/05-app-webhooks/webapp/templates/deployment.yaml
@@ -4,8 +4,6 @@ metadata:
   name: {{ include "webapp.fullname" . }}
   labels:
     {{- include "webapp.labels" . | nindent 4 }}
-  annotations:
-    link.argocd.argoproj.io/external-link: http://labs.sass.ro:{{ .Values.service.externalPort }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
@@ -13,14 +11,15 @@ spec:
   selector:
     matchLabels:
       {{- include "webapp.selectorLabels" . | nindent 6 }}
-    template: 
-      metadata: 
-        {{- with .Values.podAnnotations }} 
-        annotations: 
-          {{- toYaml . | nindent 8 }} 
-        {{- end }} 
-        labels: 
-          {{- include "webapp.selectorLabels" . | nindent 8 }} 
+  template:
+    metadata:
+      annotations:
+        gitops.training.sass.ro/appVersion: {{ .Chart.AppVersion | quote}}
+        {{- with .Values.podAnnotations }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
+      labels:
+        {{- include "webapp.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
