--- a/05-app-webhooks/webapp/templates/deployment.yaml
+++ b/05-app-webhooks/webapp/templates/deployment.yaml
@@ -1,6 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+        link.argocd.argoproj.io/external-link: http://labs.sass.ro:{{.Values.service.externalPort}}
   name: {{ include "webapp.fullname" . }}
   labels:
     {{- include "webapp.labels" . | nindent 4 }}
@@ -13,11 +15,10 @@ spec:
       {{- include "webapp.selectorLabels" . | nindent 6 }}
   template:
     metadata:
+      {{- with .Values.podAnnotations }}
       annotations:
-        gitops.training.sass.ro/appVersion: {{ .Chart.AppVersion | quote}}
-        {{- with .Values.podAnnotations }}
-          {{- toYaml . | nindent 8 }}
-        {{- end }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       labels:
         {{- include "webapp.selectorLabels" . | nindent 8 }}
     spec:
