--- a/05-app-webhooks/webapp/templates/deployment.yaml
+++ b/05-app-webhooks/webapp/templates/deployment.yaml
@@ -15,8 +15,9 @@ spec:
       {{- include "webapp.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      {{- with .Values.podAnnotations }}
       annotations:
+      gitops.training.sass.ro/appVersion: {{ .Chart.AppVersion | quote}}
+      {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
